--- a/README.org
+++ b/README.org
@@ -8,3 +8,24 @@ tried to apply this here.  Each cpp file also has a hpp file with
 classes and function definitions.
 
 I added a CMake based build system and attempted to embed Python.
+
+* Compilation
+#+begin_example
+cd source
+mkdir build
+cmake -G Ninja ..
+ninja
+#+end_example
+
+* How to run
+
+Download a raw copernicus sentinel 1 dataset from https://scihub.copernicus.eu.
+
+I used this link (not sure if it works):
+https://scihub.copernicus.eu/dhus/odata/v1/Products(%278034f2a7-0e1c-4270-82dc-0c5bc3211cb7%27)/Nodes(%27S1A_S3_RAW__0SDH_20210221T213548_20210221T213613_036693_044FED_A100.SAFE%27)/Nodes(%27s1a-s3-raw-s-hh-20210221t213548-20210221t213613-036693-044fed.dat%27)/$value
+
+
+#+begin_example
+cd source/build
+./mytest ~/Downloads/s1a-s3-raw-s-hh-20210221t213548-20210221t213613-036693-044fed.dat
+#+end_example
